prometheus/prometheus-ext-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-ext
  namespace: monitoring
  labels:
    k8s-app: prometheus
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    k8s-app: prometheus
  type: ClusterIP
