prometheus/prometheus-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    k8s-app: prometheus
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9090
  selector:
    k8s-app: prometheus
  type: ClusterIP
