prometheus/prometheus-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - secretName: prometheus-ingress-tls
    hosts:
    - prom.tech.dreamhack.se
  rules:
  - host: prom.tech.dreamhack.se
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-ext
          servicePort: 80
